--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,2 @@
-/.vscode/settings.json
-
-/Packages
-/ServerPackages
-/DevPackages
-
-roblox_packages
+luau_packages
 lune_packages
-pesde.lock
-
-/sourcemap.json
-/wally.lock
-
-/build
-/moonwave
