--- a/selene.toml
+++ b/selene.toml
@@ -1,8 +1,1 @@
-std = "roblox"
-
-exclude = []
-
-[lints]
-shadowing = "allow"
-incorrect_standard_library_use = "allow"
-unused_variable = "allow"
+std = "luau"
